# agent-content-kit

./: .env.example  .gitignore  Dockerfile.agents  README-VI.md  README.md  docker-compose.agents.yml  docker-compose.nango.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: main.py  telegram_bot.py
backend/agents/: __init__.py  ab_testing.py  ai_image.py  ai_video.py  analyzer.py  base.py  character.py  document_parser.py  fetcher.py  llm_client.py  notifier.py  pipeline.py  publisher.py  reviewer.py  schemas.py  scriptwriter.py  thumbnail.py  trend_scraper.py  video_quality.py  voice.py
backend/agents/composer/: __init__.py  ffmpeg.py  renderer.py  stock_service.py
backend/api/: __init__.py
backend/core/: __init__.py  browser_session.py  celery_app.py  config.py  database.py  error_middleware.py  kling_client.py  llm_manager.py  nango_client.py  oauth_manager.py  path_utils.py  pixelle_client.py  runway_client.py
backend/models/: __init__.py  analytics.py  base.py  content_job.py  schedule.py
backend/tasks/: __init__.py  agent_tasks.py  analytics_collector.py  pipeline_runner.py  schedule_tasks.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  theme.ts
data/: script_history.json
tests/: conftest.py  test_agents.py  test_ai_image.py  test_ai_video.py  test_analyzer.py  test_api.py  test_character.py  test_document_parser.py  test_kling_client.py  test_llm_manager.py  test_notifier.py  test_pixelle_client.py  test_runway_client.py  test_trend_scraper.py
(+27 files in other folders)
